test_results/refactoring/strategy_pattern_results_codestral-2501/iteration_04/test_result.txt
TEST_STATUS: FAILURE
DIFF_STATUS: SUCCESS
RETURNCODE: 1
TIMESTAMP: 2026-02-08T00:06:21.102909

=== PYTEST STDOUT ===


=== PYTEST STDERR ===
Traceback (most recent call last):
  File "<frozen runpy>", line 198, in _run_module_as_main
  File "<frozen runpy>", line 88, in _run_code
  File "C:\Users\ronal\AppData\Local\Programs\Python\Python314\Scripts\pytest.exe\__main__.py", line 6, in <module>
    sys.exit(console_main())
             ~~~~~~~~~~~~^^
  File "C:\Users\ronal\AppData\Local\Programs\Python\Python314\Lib\site-packages\_pytest\config\__init__.py", line 223, in console_main
    code = main()
  File "C:\Users\ronal\AppData\Local\Programs\Python\Python314\Lib\site-packages\_pytest\config\__init__.py", line 193, in main
    config = _prepareconfig(new_args, plugins)
  File "C:\Users\ronal\AppData\Local\Programs\Python\Python314\Lib\site-packages\_pytest\config\__init__.py", line 352, in _prepareconfig
    initial_config = get_config(args, plugins)
  File "C:\Users\ronal\AppData\Local\Programs\Python\Python314\Lib\site-packages\_pytest\config\__init__.py", line 324, in get_config
    pluginmanager.import_plugin(spec)
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^
  File "C:\Users\ronal\AppData\Local\Programs\Python\Python314\Lib\site-packages\_pytest\config\__init__.py", line 889, in import_plugin
    self.register(mod, modname)
    ~~~~~~~~~~~~~^^^^^^^^^^^^^^
  File "C:\Users\ronal\AppData\Local\Programs\Python\Python314\Lib\site-packages\_pytest\config\__init__.py", line 522, in register
    plugin_name = super().register(plugin, name)
  File "C:\Users\ronal\pluggy_testing\src\pluggy\_manager.py", line 119, in register
    hook._maybe_apply_history(hookimpl)
    ~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^
  File "C:\Users\ronal\pluggy_testing\src\pluggy\_hooks.py", line 431, in _maybe_apply_history
    res = self._hookexec(self.name, [method], kwargs, False)
  File "C:\Users\ronal\pluggy_testing\src\pluggy\_manager.py", line 85, in _hookexec
    return self._inner_hookexec(hook_name, methods, kwargs, firstresult)
           ~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\ronal\pluggy_testing\src\pluggy\_callers.py", line 153, in _multicall
    raise exception
  File "C:\Users\ronal\pluggy_testing\src\pluggy\_callers.py", line 115, in _multicall
    STRATEGY_MAP[strategy_key](hook_impl, hook_name, args, teardowns, results, firstresult)
    ~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: _strategy_regular() takes 5 positional arguments but 6 were given

